# klomang-network

./: .gitignore  ADVANCED_CONFLICT_DELIVERY_SUMMARY.md  INTEGRATION_IMPLEMENTATION_SUMMARY.md  README.md
klomang-core/: .gitignore  Cargo.toml  LICENSE  README.md
klomang-core/docs/: LEGAL_NOTICE.md  LISENSI_DAN_HUKUM.md  TESTNET_READY.md  klomang-core-consensus.md  klomang-core-crypto.md  klomang-core-ekonomi.md  klomang-core-scheduler.md  klomang-core-state.md  klomang-core-vm.md
klomang-core/scripts/: run_economic_policy_status.sh
klomang-core/src/: lib.rs
klomang-core/src/core/: config.rs  errors.rs  mempool.rs  metrics.rs  mod.rs  state_manager.rs
klomang-core/tests/: comprehensive_integration_test.rs  consensus_validation_test.rs  crypto_operations_test.rs  daa_consensus_test.rs  economic_edge_cases.rs  error_scenarios_test.rs  integration_workflow_test.rs  parallel_determinism_test.rs  pow_edge_cases_test.rs  state_edge_cases_test.rs  test_economic_edge_cases.rs  unit_coverage_tests.rs
klomang-node/: ATOMIC_WRITE_IMPLEMENTATION.md  ATOMIC_WRITE_PATH.md  ATOMIC_WRITE_QUICK_REFERENCE.md  COMPILATION_DEPLOYMENT_CHECKLIST.md  COMPLETION_CHECKLIST.md  Cargo.toml  DELIVERY_SUMMARY.md  DOCUMENTATION_DELIVERY_REPORT.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_REPORT.md  KEY_SCHEMA_DESIGN.md  KLOMANG_CORE_INTEGRATION.md  PERFORMANCE_BENCHMARKING_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README_ATOMIC_WRITE.md  README_STORAGE_OPTIMIZATION.md  READ_PATH_KLOMANG_CORE_INTEGRATION.md  READ_PATH_OPTIMIZATION.md  READ_PATH_QUICK_REFERENCE.md  node_identity.key  validate_anti_spam.rs
klomang-node/.cargo/: config.toml
klomang-node/.test_coinbase/: IDENTITY  LOG  LOG.old.1777043367928853  LOG.old.1777048903549060  LOG.old.1777054385875710  LOG.old.1777209782281312  LOG.old.1777210947095279  OPTIONS-000047
klomang-node/.test_utxos/: IDENTITY  LOG  LOG.old.1777043367978220  LOG.old.1777048903591084  LOG.old.1777054385917596  LOG.old.1777209227049990  LOG.old.1777209782315422  LOG.old.1777210947135516  MANIFEST-000033  MANIFEST-000045  OPTIONS-000047
klomang-node/docs/: backup_recovery_system.md  integration_points.md  storage_testing_suite.md
klomang-node/examples/: advanced_conflict_examples.rs  atomic_block_commit.rs  key_schema_usage.rs  mempool_comprehensive_example.rs  read_path_optimization.rs  utxo_conflict_examples.rs
klomang-node/gossipsub_message_cache/: IDENTITY  LOG  LOG.old.1777864024622305  LOG.old.1777904162773748  LOG.old.1777906142765845  LOG.old.1777906331734820  OPTIONS-000035
klomang-node/peer_discovery_store/: IDENTITY  LOG  LOG.old.1777655553809129  LOG.old.1777740462343934  LOG.old.1777742046349057  LOG.old.1777776607741864  LOG.old.1777824490317892  LOG.old.1777824569683633  LOG.old.1777824600426852  LOG.old.1777824662942018  LOG.old.1777860408175779  LOG.old.1777863889765741  LOG.old.1777864024644924  LOG.old.1777904162800448  LOG.old.1777906142768264  LOG.old.1777906331762313  MANIFEST-000005  MANIFEST-000065  OPTIONS-000023
klomang-node/src/: lib.rs  main.rs
klomang-node/src/mempool/: ADVANCED_CONFLICT_IMPLEMENTATION_COMPLETE.md  ADVANCED_CONFLICT_MANAGEMENT.md  ADVANCED_VERIFICATION_REPORT.md  GRAPH_BASED_CONFLICT_ORDERING.md  IMPLEMENTATION_SUMMARY.md  MEMPOOL_COMPLETE_GUIDE.md  README.md  UTXO_CONFLICT_MANAGEMENT.md  admission_controller.rs  advanced_conflicts.rs  advanced_dependency_manager.rs  advanced_orphan_management.rs  advanced_transaction_manager.rs  background_batch_processor.rs  cascade_coordinator.rs  conflict.rs  conflict_graph.rs  conflict_rbf_integration.rs  conflict_rbf_tests.rs  dependency_eviction_system.rs  dependency_graph.rs  dependency_ordering_engine.rs  enhanced_validator.rs  (+32 more)
klomang-node/tests/: advanced_conflict_test.rs  anti_spam_validation.rs  comprehensive_dependency_management_tests.rs  conflict_ordering_integration_test.rs  graph_conflict_ordering_simple_test.rs  mempool_integration_test.rs  storage_integration_test.rs  utxo_conflict_test.rs
(+85 files in other folders)
