[package]
name = "klomang-node"
version = "0.1.0"
edition = "2021"
authors = ["Klomang Development Team <dev@klomang.org>"]
description = "Klomang node implementation with RocksDB storage backend."
license = "Apache-2.0"

[dependencies]
rocksdb = { version = "0.21", features = ["zstd", "snappy", "multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
serde_json = "1.0"
klomang-core = { path = "../klomang-core" }
lru = "0.12"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
tempfile = "3.0"
