[package]
name = "klomang-node"
version = "0.1.0"
edition = "2021"
authors = ["Klomang Development Team <dev@klomang.org>"]
description = "Klomang node implementation with RocksDB storage backend."
license = "Apache-2.0"

[dependencies]
rocksdb = { version = "0.21.0", default-features = false, features = ["snappy", "lz4", "zstd", "multi-threaded-cf"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
serde_json = "1.0"
klomang-core = { path = "../klomang-core" }
lru = "0.12"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
prometheus = "0.13"
lazy_static = "1.4"
indexmap = "2.0"
priority-queue = "1.3"
arc-swap = "1.6"
once_cell = "1.19"
num_cpus = "1.16"
rkyv = "0.7"
tempfile = "3.8"

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test.package."*"]
opt-level = 3
debug = false